--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-2.78MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-998.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇨🇳 中国-10.55MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.75MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: 67sg01.fans8.xyz, port: 443, type: trojan, password: 332cf3f1-47d5-454d-a6ae-fdffdbe7e85e, sni: 67sg01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: bwg2.gushidawang.cc, port: 57539, type: vmess, uuid: fcf7202c-bd1a-44e9-a25e-bf152f6e5c11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-339.2KB/s(Youtube:不良林), server: 23.19.26.218, port: 6082, type: vmess, uuid: 9674b201-ac76-4322-a9a3-2afd7f746513, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /paQd6Rug/, ws-headers: {Host: 23.19.26.218}}
-  - {name: 🇺🇸 美国-5.09MB/s(Youtube:不良林), server: gcfree.galaxy-cloud.icu, port: 443, type: vmess, uuid: 3f0613b2-fbff-4aa1-8731-3e13f0d6992d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /UAVwoa, ws-headers: {Host: gcfree.galaxy-cloud.icu}}
+  - {name: 🇨🇳 中国-8.95MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.24MB/s(Youtube:不良林), server: yp-cm-002.omo-m0m.com, port: 5703, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: yp-cm-002.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
