--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-10.55MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.95MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.51MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-15.24MB/s(Youtube:不良林), server: yp-cm-002.omo-m0m.com, port: 5703, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: yp-cm-002.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: 143.198.130.21, port: 42382, type: vmess, uuid: 03b452a7-907b-4f77-8ca4-60250cc835bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.99MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.31MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
