--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.31MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.21MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20730, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.03MB/s(Youtube:不良林), server: 146.56.96.252, port: 2333, type: ssr, cipher: aes-256-cfb, password: doub.io, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-379.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-621.9KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20719, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-881.4KB/s(Youtube:不良林), server: baying.xiba1.xyz, port: 949, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: baying.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-932.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20742, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-693.2KB/s(Youtube:不良林), server: baying.xiba1.xyz, port: 936, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: baying.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: baying.xiba1.xyz, port: 936, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: baying.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-693.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
